--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "process": "^0.11.10",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
+    "@types/vuelidate": "^0.7.21",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^4.9.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-environment": "^1.1.3"
   },
   "config": {
     "commitizen": {
