--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "process": "^0.11.10",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vuelidate": "^0.7.7"
+    "vuelidate": "^0.7.7",
+    "firebase": "^8.7.1"
   },
   "devDependencies": {
     "@types/vuelidate": "^0.7.21",
