--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "firebase": "^8.10.1",
     "process": "^0.11.10",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vuelidate": "^0.7.7",
-    "firebase": "^8.7.1"
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
     "@types/vuelidate": "^0.7.21",
